css/custom.css
.inner-content {
	position: relative;
  	top: 50%;
  	transform: translateY(-50%);
}

.inner-content h4 {
	margin: 1.5em 0;
	line-height: 1.5;
}

.navbar-brand img {
	width: 12em;
}

.slide-content-2 {
    height: 350px;
}

.work-filter > ul:first-child {
	margin-bottom: 1.5em;
}

.widget-wrapper {
	margin: 0 auto;
}

.products {
	margin: 0 auto;
}

.product-wrapper {
	width: 100%;
	margin: 0 auto;
}

.widget-wrapper {
	margin: 0 auto;
}

.margin-top {
    margin-top: 2.5em;
}

.blog-banner {
    margin-bottom: 1.5em;
}

@media (min-width: 768px) {



}

@media (min-width: 992px) {
    .product-wrapper {
        width: 750px;
    }
}

@media (min-width: 1025px) {
    .product-wrapper {
        width: 970px;
    }
}

@media (min-width: 1200px) {
    .product-wrapper {
        width: 1180px;
    }
}

@media (min-width: 1800px) {
    .product-wrapper {
        width: 1280px;
    }
}

